--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nuxt": "3.0.0"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.1.3"
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@vueuse/nuxt": "^9.6.0"
   }
 }
