--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nuxt": "3.0.0"
   },
   "dependencies": {
+    "@nuxtjs/supabase": "^0.3.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@vueuse/nuxt": "^9.6.0"
   }
